--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "cally": "^0.8.0",
     "firebase": "^11.6.1",
     "react": "^19.1.0",
     "react-day-picker": "^9.6.7",
